developer2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issy-backend-deployment
  labels:
    app: issy-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: issy-backend
  template:
    metadata:
      labels:
        app: issy-backend
    spec:
      containers:
      - name: issy-backend
        image: sunhaunt/clamav
        ports:
        - containerPort: 8400
