ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: issy-ingress
spec:
  defaultBackend:
    service:
      name: issy-frontend-service
      port:
        number: 4000
